# nestlet

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  config.example.yaml  main.py  pyproject.toml
examples/: text_analysis.py
inception/: __init__.py
inception/agent/: __init__.py  base.py  hybrid_agent.py
inception/config/: __init__.py  settings.py
inception/executor/: __init__.py  kernel.py  state.py
inception/memory/: __init__.py  conversation.py  working_memory.py
inception/metacognition/: __init__.py  capability.py  data_estimator.py  decision.py
inception/planner/: __init__.py  decomposer.py
inception/provider/: __init__.py  anthropic.py  base.py  openai.py
inception/tool/: __init__.py  base.py  factory.py  registry.py
inception/tool/builtin/: __init__.py  code_exec.py  file_ops.py  llm_call.py  office_parser.py  web_search.py
plugins/: .gitkeep
tests/: test_placeholder.py
